tests/specs/run/unsafe_proto_suggestion/read_unrelated_throw.out
error: Uncaught (in promise) Error: boom
throw new Error("boom");
      ^
    at [WILDCARD]read_unrelated_throw.js:6:7
